// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Custom Input with icons matches the snapshot 1`] = `
<body>
  <div>
    <div
      class="sc-hKgJUU hNtsdb"
    >
      <i
        class="sc-bdfBQB gNwdVP fas fa-address-book"
      />
      <input
        class="sc-gsTEea eQzZSW sc-hKgJUU hNtsdb"
      />
      <i
        class="sc-bdfBQB gJpiMQ fas fa-address-book"
      />
    </div>
  </div>
</body>
`;

exports[`Custom Input with no icons matches the snapshot 1`] = `
<body>
  <div>
    <div
      class="sc-hKgJUU hNtsdb"
    >
      <input
        class="sc-gsTEea QNjxA sc-hKgJUU hNtsdb"
      />
    </div>
  </div>
</body>
`;
